--- a/Scrapping Link 1.html
+++ b/Scrapping Link 1.html
@@ -13346,11 +13346,21 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[57]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">re</span>
-<span class="n">df</span><span class="p">[</span><span class="s1">&#39;Full Address&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="nb">len</span><span class="p">(</span><span class="n">re</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="n">x</span><span class="p">[</span><span class="mi">0</span><span class="p">])))</span><span class="o">.</span><span class="n">max</span><span class="p">(),</span> <span class="n">df</span><span class="p">[</span><span class="s1">&#39;Full Address&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="nb">len</span><span class="p">(</span><span class="n">x</span><span class="p">))</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Getting details from Address</span>
+<span class="c1"># Assumption : PIN COde is atleast 3 digits</span>
+<span class="k">def</span> <span class="nf">get_pincode</span><span class="p">(</span><span class="n">text</span><span class="p">):</span>
+    <span class="n">a</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">findall</span><span class="p">(</span><span class="s2">&quot;[1-9][0-9][0-9][0-9]+&quot;</span><span class="p">,</span> <span class="n">text</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">])</span>
+    <span class="k">if</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">a</span><span class="p">)):</span> <span class="k">return</span> <span class="n">a</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+    
+<span class="n">df</span><span class="p">[</span><span class="s1">&#39;State&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s1">&#39;Address&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="n">re</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="n">x</span><span class="p">)[</span><span class="mi">0</span><span class="p">])</span>
+<span class="n">df</span><span class="p">[</span><span class="s1">&#39;Country&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s1">&#39;Address&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="n">re</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="n">x</span><span class="p">)[</span><span class="o">-</span><span class="mi">1</span><span class="p">])</span>
+<span class="n">df</span><span class="p">[</span><span class="s1">&#39;Pincode&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s1">&#39;Full Address&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="n">get_pincode</span><span class="p">(</span><span class="n">x</span><span class="p">))</span>
+
+<span class="n">df</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s2">&quot;trading_hours_exchanges.csv&quot;</span><span class="p">)</span>
+<span class="n">df</span>
 </pre></div>
 
     </div>
@@ -13363,13 +13373,153 @@ div#notebook {
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[15]:</div>
+    <div class="prompt output_prompt">Out[57]:</div>
 
 
 
+<div class="output_html rendered_html output_subarea output_execute_result">
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
 
-<div class="output_text output_subarea output_execute_result">
-<pre>(5, 4)</pre>
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Name</th>
+      <th>Address</th>
+      <th>Contact</th>
+      <th>Full Address</th>
+      <th>State</th>
+      <th>Country</th>
+      <th>Pincode</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>New York Stock Exchange</td>
+      <td>New York, United States</td>
+      <td>+1 212-896-2830</td>
+      <td>[11 Wall Street, New York, NY 10005]</td>
+      <td>New York</td>
+      <td>United States</td>
+      <td>10005</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>NASDAQ Stock Exchange</td>
+      <td>New York, United States</td>
+      <td>+1 212-401-8700</td>
+      <td>[One Liberty Plaza, 165 Broadway, New York, NY...</td>
+      <td>New York</td>
+      <td>United States</td>
+      <td>10006</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>London Stock Exchange</td>
+      <td>London, United Kingdom</td>
+      <td>+44 20 7797 4400</td>
+      <td>[10 Paternoster Square, London, EC4M 7LS]</td>
+      <td>London</td>
+      <td>United Kingdom</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>Tokyo Stock Exchange</td>
+      <td>Tokyo, Japan</td>
+      <td>+81 3-3666-1361</td>
+      <td>[2-1 Nihombashi Kabutocho, Chuo-ku, Tokyo 103-...</td>
+      <td>Tokyo</td>
+      <td>Japan</td>
+      <td>8224</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>Shanghai Stock Exchange</td>
+      <td>Shanghai, China</td>
+      <td>+86 21 6880 8888</td>
+      <td>[China, Shanghai Shi, Pudong Xinqu, Lu Jia Zui...</td>
+      <td>Shanghai</td>
+      <td>China</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>...</th>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+    </tr>
+    <tr>
+      <th>139</th>
+      <td>Sydney Stock Exchange</td>
+      <td>Sydney, Australia</td>
+      <td>+61 2 9217 2730</td>
+      <td>[Level 41, 259 George Street, Sydney NSW 2000]</td>
+      <td>Sydney</td>
+      <td>Australia</td>
+      <td>2000</td>
+    </tr>
+    <tr>
+      <th>140</th>
+      <td>Belarusian Currency and Stock Exchange</td>
+      <td>Minsk, Belarus</td>
+      <td>+375 17 309-33-22</td>
+      <td>[48a,Surganova str., 220013 Minsk, Belarus]</td>
+      <td>Minsk</td>
+      <td>Belarus</td>
+      <td>220013</td>
+    </tr>
+    <tr>
+      <th>141</th>
+      <td>Korea Exchange (KOSDAQ)</td>
+      <td>Seoul, South Korea</td>
+      <td>+82 1577-0088</td>
+      <td>[76, Yeouinaru-ro, Yeongdeungpo-gu, Seoul]</td>
+      <td>Seoul</td>
+      <td>South Korea</td>
+      <td>None</td>
+    </tr>
+    <tr>
+      <th>142</th>
+      <td>Regional Securities Exchange SA</td>
+      <td>Abidjan, Ivory Coast</td>
+      <td>+225 20 32 66 84</td>
+      <td>[BRVM - Regional Stock Exchange, 18, Rue Josep...</td>
+      <td>Abidjan</td>
+      <td>Ivory Coast</td>
+      <td>3802</td>
+    </tr>
+    <tr>
+      <th>143</th>
+      <td>Iran Fara Bourse</td>
+      <td>Tehran, Iran</td>
+      <td>+98 21 4215 0226</td>
+      <td>[Tehran Province, Tehran, No. 1, North Didar S...</td>
+      <td>Tehran</td>
+      <td>Iran</td>
+      <td>None</td>
+    </tr>
+  </tbody>
+</table>
+<p>144 rows × 7 columns</p>
+</div>
 </div>
 
 </div>
